updated the experience and whats new

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       <tr>
         <td><img src="images/balajiS.png" alt="angela profile picture"></td>
         <td><h1>Balaji Srinivasan</h1>
-            <p>I am a <strong><em>Test Automation Specialist</em></strong> with 14 years of Experience. Worked on Multiple Test Automation tools and created framework from Scratch.</p>
+            <p>I am a <strong><em>Test Automation Specialist</em></strong> with 16 years of Experience. Worked on Multiple Test Automation tools and created framework from Scratch.</p>
             <p>For the last 4 years working on javascript based Test automation framework using Cypress/Playwright.</p>
-            <p>Whats new ??? Trying to upskill my javascript level to work as SDET.</p>
+            <p>Whats new ??? Trying to upskill javascript knowledge with web page designing</p>
         </td>
       </tr>
     </table>
