added semantic tag and started with css

--- a/index.html
+++ b/index.html
@@ -1,106 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/balajiS.png" alt="angela profile picture"></td>
-        <td><h1>Balaji Srinivasan</h1>
-            <p>I am a <strong><em>Test Automation Specialist</em></strong> with 16 years of Experience. Worked on Multiple Test Automation tools and created framework from Scratch.</p>
-            <p>For the last 4 years working on javascript based Test automation framework using Cypress/Playwright.</p>
-            <p>Whats new ??? Trying to upskill javascript knowledge with web page designing</p>
-        </td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Work Experiences</h3>
-    <table cellspacing="10">
-      <thead>
+<header>
+  <title> Balaji Srinivasan Portfolio </title>
+  <link href="./styles/style.css" type="text/css" rel="stylesheet">
+</header>
+
+<body>
+  <main>
+    <section class="intro">
+      <table cellspacing="20" class="header">
         <tr>
-          <th>Title</th>
-          <th>Company</th>
-          <th>Dates</th>
+          <td><img src="images/balajiS.png" alt="angela profile picture"></td>
+          <td>
+            <h1>Balaji Srinivasan</h1>
+            <article>
+              <p>I am a <strong><em>Test Automation Specialist</em></strong> with 16 years of Experience. Worked on
+                Multiple Test Automation tools and created framework from Scratch.</p>
+              <p>For the last 5 years working on javascript based Test automation framework using Cypress/Playwright.
+              </p>
+              <p>Whats new ??? Trying to upskill javascript knowledge with web page designing</p>
+              <p><a href="https://github.com/Balajimaddy?tab=repositories"> Github</a></p>
+            </article>
+          </td>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-            <td>Web UI Automation Contractor</td>	
+      </table>
+    </section>
+    <hr>
+    <section class="work experiences">
+      <h3>Work Experiences</h3>
+      <table cellspacing="10" class="experience">
+        <thead>
+          <tr class="experience">
+            <th>Title</th>
+            <th>Company</th>
+            <th>Dates</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Web UI Automation Contractor</td>
             <td>Play Sports Network</td>
             <td>Sep 22 – Till Date</td>
-        </tr>
-        <tr>
-            <td>Test Automation Lead</td>	
+          </tr>
+          <tr>
+            <td>Test Automation Lead</td>
             <td>Pirean UK Ltd/Exostar</td>
             <td>Jul 21 – Aug 22</td>
-        </tr>
-        <tr>
-            <td>Senior Test Automation Analyst</td>	
+          </tr>
+          <tr>
+            <td>Senior Test Automation Analyst</td>
             <td>Eurobase Insurance</td>
             <td>Jun 20 – Jul 21</td>
-        </tr>        
-        <tr>
-            <td>Senior Test Automation Engineer</td>	
+          </tr>
+          <tr>
+            <td>Senior Test Automation Engineer</td>
             <td>Qualitest UK Ltd</td>
             <td>Mar 17 – May 20</td>
-        </tr>        
-        <tr>
-            <td>Lead Automation Tester</td>	
+          </tr>
+          <tr>
+            <td>Lead Automation Tester</td>
             <td>QuickLink Consultancy Ltd, UK</td>
             <td>Apr 15 – Feb 17</td>
-        </tr>        
-        <tr>
-            <td>Senior Test Automation Engineer</td>	
+          </tr>
+          <tr>
+            <td>Senior Test Automation Engineer</td>
             <td>QAssure Technologies, Singapore</td>
             <td>May 11 – Mar 15</td>
-        </tr>        
-        <tr>
-            <td>Lead Test Engineer</td>	
+          </tr>
+          <tr>
+            <td>Lead Test Engineer</td>
             <td>HCL Technologies, Chennai-India</td>
             <td>May 10 – May 11</td>
-        </tr>        
-        <tr>
-            <td>Senior Test Engineer</td>	
+          </tr>
+          <tr>
+            <td>Senior Test Engineer</td>
             <td>Maveric Systems Ltd, Chennai - India</td>
             <td>May 07 – May 10</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <hr>
+    <section class="skills">
+      <h3>Skills</h3>
+      <table cellspacing="10">
+        <tr>
+          <td>Testing Methodologies</td>
+          <td>Agile Scrum & Kanban, Lean UX, Waterfall, BDD, Serenity BDD</td>
         </tr>
-      </tbody>
-    </table>
+        <tr>
+          <td>Automation Tools</td>
+          <td>Cypress , Selenium, Playwright, HP QTP/UFT</td>
+        </tr>
+        <tr>
+          <td>API Tools</td>
+          <td>Postman, SoapUI</td>
+        </tr>
+        <tr>
+          <td>Database Testing</td>
+          <td>SQL Server & Oracle SQL </td>
+        </tr>
+        <tr>
+          <td>Test Management tools</td>
+          <td>HP QC/ALM , Microsoft TFS, JIRA</td>
+        </tr>
+        <tr>
+          <td>CI/CD Pipeline</td>
+          <td>Azure Devops, Github Actions & Jenkins</td>
+        </tr>
+        <tr>
+          <td>Programming Languages</td>
+          <td>javascript, Java, VBscript, C#</td>
+        </tr>
+        <tr>
+          <td>Others</td>
+          <td>Windows Powershell, vbscript, Swagger, docker</td>
+        </tr>
+      </table>
+    </section>
     <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">            
-      <tr>
-        <td>Testing Methodologies</td>
-        <td>Agile Scrum & Kanban, Lean UX, Waterfall, BDD, Serenity BDD</td>
-      </tr>
-      <tr>
-        <td>Automation Tools</td>
-        <td>Cypress , Selenium, Playwright, HP QTP/UFT</td>
-      </tr>
-       <tr>
-        <td>API Tools</td>
-        <td>Postman, SoapUI</td>
-      </tr>
-      <tr>
-        <td>Database Testing</td>
-        <td>SQL Server & Oracle SQL </td>
-      </tr>
-      <tr>
-        <td>Test Management tools</td>
-        <td>HP QC/ALM , Microsoft TFS, JIRA</td>
-      </tr>
-      <tr>
-        <td>CI/CD Pipeline</td>
-        <td>Azure Devops, Github Actions & Jenkins</td>
-      </tr>
-      <tr>
-        <td>Programming Languages</td>
-        <td>javascript, Java, VBscript, C#</td>
-      </tr>
-      <tr>
-        <td>Others</td>
-        <td>Windows Powershell, vbscript, Swagger, docker</td>
-      </tr>
-    </table>
-    <hr>
+  </main>
+  <footer>
     <a href="contact-me.html">Contact Me</a>
-  </body>
+  </footer>
+</body>
+
 </html>
